--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 a:link
 {
 	text-decoration: none;
+	font-weight: bold;
 	color: #039;
 }
 
@@ -27,7 +28,7 @@ a:active
 
 body 
 {
-	background-color: #D4D4D4;
+	background-color: #F7F7F7;
 }
 
 p.lastupdate {
@@ -37,15 +38,13 @@ p.lastupdate {
 
 h1
 {
-	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+	font-family: "Ubuntu","Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-size: 30px;
-	color: #039;
+	color: black;
     font-size: 40px;
     line-height: 50px;
 	text-align: center;
-	text-decoration: underline;
 }
-
 
 sup
 {
@@ -57,7 +56,7 @@ table.disclaimeranddonations
 {
 	width: 98%;
 	margin-right: 0px;
-	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+	font-family: "Ubuntu","Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-size: 10px;
 	margin: 20px;
 	width: auto;
@@ -65,28 +64,11 @@ table.disclaimeranddonations
 	border-collapse: collapse;
 }
 
-table.disclaimeranddonations th
-{
-
-}
-
-table.disclaimeranddonations td
-{
-
-}
-
-table.disclaimeranddonations tr:hover td
-{
-	background: #d0dafd;
-	color: #339;
-
-}
-
 table.main 
 {
 	width: 98%;
 	margin-right: 0px;
-	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+	font-family: "Ubuntu","Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-size: 12px;
 	margin: 20px;
 	width: auto;
@@ -97,31 +79,39 @@ table.main
 table.main th
 {
 	font-size: 15px;
-	font-weight: normal;
-	padding: 8px;
-	background: #b9c9fe;
-	border-top: 0px solid #fff;
-	border-bottom: 1px solid #fff;
-	border-left: 1px solid #fff;
-	border-right: 1px solid #fff;
-	color: #039;
+	font-weight: bold;
+	padding: 2px;
+	background: #C5D9D8;/*#b9c9fe;*/
+	border-top: 2px solid black;
+	border-bottom: 2px solid black;
+	border-left: none;
+	border-right: none;
+	color: black;
 	text-align: center;
 }
 
 table.main td
 {
 	padding: 8px;
-	background: #e8edff; 
-	border-bottom: 1px solid #fff;
+	background: white; /*#e8edff; */
+	border-bottom: 1px solid black;
 	color: #669;
 	border-top: 1px solid transparent;
-	border-left: 1px solid #fff;
-	border-right: 1px solid #fff;
+	/*border-left: 1px solid #fff;
+	border-right: 1px solid #fff;*/
 	/*text-align: center;*/
+}
+
+img.qrcode
+{
+	margin-left: 20px;
+	margin-right: 10px;
+	margin-bottom: 20px;
+	float: left;
 }
 
 table.main tr:hover td
 {
-	background: #d0dafd;
-	color: #339;
+	background: #C5D9D8;/*#d0dafd;*/
+	color: black;
 }
